<resources>
    <string name="app_name">Project 0: My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_app_portfolio_title">My App Portfolio</string>
    <string name="app_name_spotify_streamer">Spotify Streamer</string>
    <string name="app_name_football_scores">Football Scores</string>
    <string name="app_name_library_app">Library App</string>
    <string name="app_name_build_it_bigger">Build It Bigger</string>
    <string name="app_name_xyz_reader">XYZ Reader</string>
    <string name="app_name_capstone">Capstone: My Own App</string>
</resources>
