<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_app_portfolio_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_app_porfolio_title"
        android:textSize="45sp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_spotify_streamer"
        android:id="@+id/button"
        android:layout_marginTop="60sp"
        android:layout_below="@+id/my_app_porfolio_title"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#ffffa850"
        android:width="200sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_football_scores"
        android:id="@+id/button2"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#ffffa850"
        android:width="200sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_library_app"
        android:id="@+id/button3"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#ffffa850"
        android:width="200sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_build_it_bigger"
        android:id="@+id/button4"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#ffffa850"
        android:width="200sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_xyz_reader"
        android:id="@+id/button5"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#ffffa850"
        android:width="200sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_capstone"
        android:id="@+id/button6"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="#ffda2749"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:width="200sp"
        android:onClick="sendMessage"
        android:clickable="true" />


</RelativeLayout>
